footer and animations

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
                 </div>
 
                 <div>
-                    <a href="callto:+61 3 96497691">moodle</a>
-                    <a href="callto:+61 3 96497691">aaply onlince</a>
+                    <a class="btn btn-sm btn-light text-dark" href="callto:+61 3 96497691"> <img
+                            src="img/icons/online-learning.png" alt=""> moodle</a>
+                    <a href="callto:+61 3 96497691" class="btn text-dark btn-sm btn-light"><img
+                            src="img/icons/submit.png" alt=""> apply
+                        online</a>
 
                 </div>
             </div>
@@ -64,10 +67,10 @@
                         <span class="menu-link" data-toggle="submenu">student orienation<i
                                 class="bx bx-chevron-down"></i></span>
                         <ul class="submenu">
-                            <li class="submenu-item"><a href="complaint.php" class="submenu-link">Register Complaint</a>
+                            <li class="submenu-item"><a href="complaint.php" class="submenu-link">First name coloum</a>
                             </li>
-                            <li class="submenu-item"><a href="complaint-status.php" class="submenu-link">Complaint
-                                    Status</a></li>
+                            <li class="submenu-item"><a href="complaint-status.php" class="submenu-link">First name
+                                    coloum</a></li>
 
                         </ul>
                     </li>
@@ -142,7 +145,9 @@
         </div>
     </section>
     <section class="courses">
-
+        <div class="abouticon aniright">
+            <img src="img/icons/homework.png" alt="">
+        </div>
         <div class="container">
             <h1 class="heading">our course</h1>
             <div class="row">
@@ -198,7 +203,7 @@
             </div>
         </div>
     </section>
-    <section class=" services bggray">
+    <section class="services bggray">
         <div class="container">
             <h1 class="heading">why choose us</h1>
 
@@ -254,7 +259,10 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="about">
+        <div class="abouticon anileft">
+            <img src="img/icons/congratulation.png" alt="">
+        </div>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
@@ -335,6 +343,98 @@
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="foottab text-center">
+                        <h4 class="m-0">AUSTRALIAN INTERNATIONAL INSTITUTE OF TECHNOLOGY</h4>
+                        <span class="">
+                            <p>RTO - 45485 <br>
+                                CRICOS - 03754M <br>
+                                ABN - 24 622 575 679</p>
+                        </span>
+
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="foottab">
+                        <h4>quick links</h4>
+                        <ul>
+                            <li><a href="">national Regulator - ASQA</a></li>
+                            <li><a href="https://www.education.gov.au/esos-framework" target="_blank">ESOS Legislative
+                                    Framework</a></li>
+                            <li><a href="https://www.yourcareer.gov.au/learn-and-train/training-providers/45485"
+                                    target="_blank">YourCareer (MySkills)</a></li>
+                            <li><a href="useful-links">Useful Links</a></li>
+                            <li><a href="Crd-to">Special Thanks and Credits</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="foottab">
+                        <h4>pdf downloads</h4>
+                        <ul>
+                            <li>
+                                <a href="PDF/AIIT_45485_Student_Handbook_RT.pdf" target="_blank">Student Handbook</a>
+                            </li>
+                            <li>
+                                <a href="PDF/forms/AIIT_45485_FORM_Admissions_Application_RT.pdf"
+                                    target="_blank">Student Application Form</a>
+                            </li>
+                            <li>
+                                <a href="PDF/forms/AIIT_45485_FORM_Short_Course_Admissions_Application.pdf"
+                                    target="_blank">Application Form - Short Courses</a>
+                            </li>
+                            <li>
+                                <a href="PDF/forms/AIIT_45485_FORM_Agent_Application_RT.pdf" target="_blank">Agent
+                                    Application Form</a>
+                            </li>
+
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="foottab text-center">
+                        <h4>business hours</h4>
+                        <span class="">
+                            <p>Monday to Friday <br>9:00am to 5:00pm</p>
+
+                        </span>
+                        <hr>
+                        <h6>AQF CERTIFICATE VERIFICATION</h6>
+                        <a href="" class="btn btn-sm btn-outline-light">Click here</a>
+                    </div>
+                </div>
+            </div>
+            <div class="obriginal">
+                <div>
+                    <img src="img/flag.png" width="150px" class="mb-2 img-fluid" alt="">
+
+                    <img src="img/flag_pride_inclusion.jpg" width="60px" class="img-fluid" alt="">
+                </div>
+                <p>Australian International Institute of Technology acknowledges Aboriginal and Torres Strait Islander
+                    people as the Traditional Custodians of the land and acknowledges and pays respect to their Elders,
+                    past and present.
+                    <br>
+                    <br>
+                    Australian International Institute of Technology respect and welcome people of all backgrounds,
+                    genders, sexualities, abilities and cultures.</p>
+            </div>
+
+        </div>
+    </footer>
+    <div class="footbar">
+        <div class="container">
+            <p> &copy; 2024 Australian International Institute of Technology Pty Ltd ATF AIIT Unit Trust T/A
+                Australian
+                International Institute of Technology.
+                (Established 2017)</p>
+        </div>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
