add section to about us and create new courses page

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
             <span class="overlay"></span>
             <nav class="navbarcstm" id="navbarcstm">
                 <ul class="menu" id="menu">
-                    <li class="menu-item"><a href="index.php" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="courses.php" class="menu-link">online portals</a></li>
+                    <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="" class="menu-link">online portals</a></li>
 
                     <li class="menu-item"><a href="aboutus.html" class="menu-link">about us</a></li>
-                    <li class="menu-item"><a href="contactus.php" class="menu-link">courses</a></li>
+                    <li class="menu-item"><a href="courses.html" class="menu-link">courses</a></li>
 
                     <li class="menu-item menu-dropdown">
                         <span class="menu-link" data-toggle="submenu">student orienation<i
