--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <nav class="navbarcstm" id="navbarcstm">
                 <ul class="menu" id="menu">
                     <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="" class="menu-link">online portals</a></li>
+                    <li class="menu-item"><a href="onlinePortal.html" class="menu-link">online portals</a></li>
 
                     <li class="menu-item"><a href="aboutus.html" class="menu-link">about us</a></li>
                     <li class="menu-item"><a href="courses.html" class="menu-link">courses</a></li>
@@ -75,7 +75,7 @@
                         </ul>
                     </li>
                     <li class="menu-item"><a href="contactus.php" class="menu-link">agents</a></li>
-                    <li class="menu-item"><a href="contactus.php" class="menu-link">contact us</a></li>
+                    <li class="menu-item"><a href="contactus.html" class="menu-link">contact us</a></li>
 
                     <!--<li class="menu-item"><a href="complaint.php" class="menu-link">Complaint</a></li>
 					<li class="menu-item"><a href="complaint-status.php" class="menu-link">Complaint Status</a></li>-->
