contact page design update and page headersection updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -89,11 +89,9 @@
 
     </header>
     <section class="headersection">
-        <div class="headerlayer">
-            <div class="container">
-                <h1 class="pageHeading">about us </h1>
-
-            </div>
+        <div class="container">
+            <h1 class="pageHeading">about us </h1>
+            <p><a href="">Home</a> / <a href="">about us</a></p>
         </div>
     </section>
 <section>
