online portals text colours changed

--- a/onlinePortal.html
+++ b/onlinePortal.html
@@ -103,7 +103,7 @@
                     <a href="">
                     <div class="portalCard">
                             <img src="img/portal/moodle.png" class="img-fluid" alt="">
-                            <h4> learning management system</h4>
+                            <h4  style="color: #f98012;"> learning management system</h4>
                     </div>
                 </a>
                 </div>
@@ -111,7 +111,7 @@
                     <a href="">
                     <div class="portalCard">
                             <img src="img/portal/Wisenet.png" class="img-fluid" alt="">
-                            <h4>Wisenet Learner App</h4>
+                            <h4  style="color: #00a880;">Wisenet Learner App</h4>
                     </div>
                 </a>
                 </div>
@@ -119,7 +119,7 @@
                     <a href="">
                     <div class="portalCard">
                             <img src="img/portal/oxfordpt.webp" class="img-fluid" alt="">
-                            <h4>English language test</h4>
+                            <h4 style="color: #063176;">English language test</h4>
                     </div>
                 </a>
                 </div>
@@ -135,7 +135,7 @@
                     <a href="">
                     <div class="portalCard">
                             <img src="img/portal/cityofmelb.webp" class="img-fluid" alt="">
-                            <h4>City of Melbourne</h4>
+                            <h4  style="color: #008077;">City of Melbourne</h4>
                     </div>
                 </a>
                 </div>
