new page added coursefees,studentadmission,studetsevicesupport

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li class="menu-item"><a href="courses.html" class="menu-link">courses</a></li>
 
                     <li class="menu-item menu-dropdown">
-                        <span class="menu-link" data-toggle="submenu">student orienation<i
+                        <span class="menu-link" data-toggle="submenu">student information<i
                                 class="bx bx-chevron-down"></i></span>
                         <ul class="submenu">
                             <li class="submenu-item"><a href="complaint.php" class="submenu-link">First name coloum</a>
@@ -431,9 +431,11 @@
                     <div class="foottab text-center">
                         <h4 class="m-0">AUSTRALIAN INTERNATIONAL INSTITUTE OF TECHNOLOGY</h4>
                         <span class="">
-                            <p>RTO - 45485 <br>
-                                CRICOS - 03754M <br>
-                                ABN - 24 622 575 679</p>
+                            <a href="https://training.gov.au/Organisation/Details/45485" target="_blank">RTO - 45485 </a>
+                            <br>
+                            <a href="https://cricos.education.gov.au/Institution/InstitutionDetails.aspx?ProviderCode=03754M" target="_blank"> CRICOS - 03754M</a><br>
+                            <a href="https://abr.business.gov.au/ABN/View?id=24622575679" target="_blank">ABN - 24 622 575 679</a>
+                       
                         </span>
 
                     </div>
