create agent page navbar links update

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                         <span class="menu-link" data-toggle="submenu">student information<i
                                 class="bx bx-chevron-down"></i></span>
                         <ul class="submenu">
-                            <li class="submenu-item"><a href="complaint.php" class="submenu-link">First name coloum</a>
+                            <li class="submenu-item"><a href="courseFees.html" class="submenu-link">courses Fees</a>
                             </li>
-                            <li class="submenu-item"><a href="complaint-status.php" class="submenu-link">First name
-                                    coloum</a></li>
+                            <li class="submenu-item"><a href="studentAdmissionProcess.html" class="submenu-link">Student Admission Process</a></li>
+                            <li class="submenu-item"><a href="studentServiceSupport.html" class="submenu-link">Student Service Support</a></li>
 
                         </ul>
                     </li>
