update breadcrumb section and agent page update

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                         </ul>
                     </li>
-                    <li class="menu-item"><a href="contactus.php" class="menu-link">agents</a></li>
+                    <li class="menu-item"><a href="agents.html" class="menu-link">agents</a></li>
                     <li class="menu-item"><a href="contactus.html" class="menu-link">contact us</a></li>
 
                     <!--<li class="menu-item"><a href="complaint.php" class="menu-link">Complaint</a></li>
@@ -96,9 +96,9 @@
                     <div class="bannerTxt">
                         <h1 class="">welcome to the <br>AUSTRALIAN INTERNATIONAL INSTITUTE OF TECHNOLOGY</h1>
                         <hr>
-                        <a href="" class="btnCstm mr-4">Explore Course</a>
+                        <a href="courses.html" class="btnCstm mr-4">Explore Course</a>
 
-                        <a href="" class="btnCstm green">Contact us</a>
+                        <a href="contactus.html" class="btnCstm green">Contact us</a>
 
                         <!-- <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto excepturi delectus id
                             exercitationem debitis beatae, maiores tempora ipsam, quae a reprehenderit, aliquid enim quo
@@ -109,21 +109,17 @@
                 <div class="col-md-6">
                     <div class="owl-carousel owl-theme" id="banner">
                         <div class="item">
-                            <img src="img/about/students.jpg" alt="">
+                            <img src="https://shorturl.at/TVOjI" alt="">
                         </div>
                         <div class="item">
-                            <img src="img/about/students1.jpg" alt="">
-
-                        </div>
-                        <div class="item">
-                            <img src="img/about/students2.jpg" alt="">
+                            <img src="https://shorturl.at/Jg7Uu" alt="">
 
                         </div>
                         <div class="item">
-                            <img src="img/about/students3.jpg" alt="">
+                            <img src="https://shorturl.at/JExad" alt="">
 
                         </div>
-
+                      
                     </div>
 
                 </div>
@@ -220,7 +216,7 @@
                         </ul>
                         <hr>
                         <br>
-                        <a href="" class="btnCstm">Read More</a>
+                        <a href="aboutus.html" class="btnCstm">Read More</a>
                     </div>
                   
                 </div>
