--- a/agents.html
+++ b/agents.html
@@ -88,6 +88,8 @@
     </section>
 <section>
     <div class="container">
+        <a href="https://www.aiit.vic.edu.au/PDF/forms/AIIT_45485_FORM_Agent_Application_RT.pdf"  download class="btn btn-warning">Download Agent Application Form </a>
+        <hr>
         <div class="agents">
             <div class="row align-items-center">
                 <div class="col-md-4">
