index page mobile layout fix and courses page create filter according to selct btn for course

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AIIT COLLAGE</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/favicon//favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/favicon//favicon-16x16.png">
+<link rel="manifest" href="img/favicon/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/navigation.css">
-
 </head>
 
 <body>
-
     <div class="headerbar">
         <div class="container-fluid">
             <div class="headerGrid">
@@ -295,7 +297,7 @@
                         <div class="flex">
                             <div class="">
                                 <div class="sicon yellowicon">
-                                    <img src="img/icons/teacher.png" width="60px" alt="">
+                                    <img src="img/icons/teacher.png" class="img-fluid" alt="AIIT College">
                                 </div>
                                 <div class="whytxt">
                                     <h6>Experienced <br> Faculty</h6>
@@ -303,7 +305,7 @@
                             </div>
                             <div class="">
                                 <div class="sicon greenicon">
-                                    <img src="img/icons/academic.png" width="60px" alt="">
+                                    <img src="img/icons/academic.png" class="img-fluid" alt="AIIT College">
                                 </div>
                                 <div class="whytxt">
                                     <h6>Academic  <br> Excellence</h6>
@@ -311,7 +313,7 @@
                             </div>
                             <div class="">
                                 <div class="sicon redicon">
-                                    <img src="img/icons/leadership.png" width="60px" alt="">
+                                    <img src="img/icons/leadership.png" class="img-fluid" alt="AIIT College">
                                 </div>
                                 <div class="whytxt">
                                     <h6>Career <br> Support</h6>
@@ -320,7 +322,7 @@
                             </div>
                             <div class="">
                                 <div class="sicon blackicon">
-                                <img src="img/icons/exchange.png" width="60px" alt="">
+                                <img src="img/icons/exchange.png" class="img-fluid" alt="AIIT College">
                                
                                 </div>
                                 <div class="whytxt">
@@ -553,7 +555,7 @@
             autoplayTimeout: 1500,
             responsive: {
                 0: {
-                    items: 1
+                    items: 2
                 },
                 600: {
                     items: 3
