font awsome Icons added  and add icons to the pages where appropriated

--- a/agents.html
+++ b/agents.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/navigation.css">
-
+    <link rel="stylesheet" href="css/font-awesome.css">
 </head>
 
 <body>
@@ -88,6 +88,7 @@
     </section>
 <section>
     <div class="container">
+
         <a href="https://www.aiit.vic.edu.au/PDF/forms/AIIT_45485_FORM_Agent_Application_RT.pdf"  download class="btn btn-warning">Download Agent Application Form </a>
         <hr>
         <div class="agents">
@@ -101,17 +102,17 @@
                             <h5>4U EDUCATION AGENCY</h5>
                             <ul>
                                 <li>
-                                    <p>1602/150 Epping Road
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> 1602/150 Epping Road
                                         Lane Cove West, New South Wales 2066</p>
                                 </li>
                                 <li>
-                                    <p>+61 406 598 829</p>
+                                    <p><i class="fa fa-phone" aria-hidden="true"></i>  +61 406 598 829</p>
                                 </li>
                                 <li>
-                                    <p>contact@4uaustralia.com</p>
+                                    <p><i class="fa fa-envelope-o" aria-hidden="true"></i> contact@4uaustralia.com</p>
                                 </li>
                                 <li>
-                                    <a href="" class="btn-link text-lowercase">www.4ueducationagency.com</a>
+                                    <a href="" class="btn-link text-lowercase"><i class="fa fa-globe" aria-hidden="true"></i> www.4ueducationagency.com</a>
                                 </li>
                             </ul>
                         </div>
