--- a/contactus.html
+++ b/contactus.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
 
 </head>
 
@@ -158,7 +159,7 @@
                                       </div>
                                     </div>
                                     <hr>
-                                    <button class="btn btn-warning" type="submit">Send</button>
+                                    <button class="btn btn-warning" type="submit"><i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send</button>
                                   </form>
                             </div>
                             
