--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/navigation.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+
 </head>
 
 <body>
@@ -21,14 +23,14 @@
         <div class="container-fluid">
             <div class="headerGrid">
                 <div>
-                    <p class="text-light">Ground Floor 313 -315 Flinders Lane, Melbourne VIC 3000</p>
+                    <p class="text-light"> <i class="fa fa-map-marker" aria-hidden="true"></i> Ground Floor 313 -315 Flinders Lane, Melbourne VIC 3000</p>
 
                 </div>
                 <div>
-                    <a href="mailto:info@aiit.vic.edu.au"> info@aiit.vic.edu.au </a>
+                    <a href="mailto:info@aiit.vic.edu.au"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@aiit.vic.edu.au </a>
                 </div>
                 <div>
-                    <a href="callto:+61 3 96497691">+61 3 96497690</a>
+                    <a href="callto:+61 3 96497691"><i class="fa fa-phone" aria-hidden="true"></i> +61 3 96497690</a>
                 </div>
 
                 <div class="headerGridBtn">
@@ -66,8 +68,7 @@
                     <li class="menu-item"><a href="courses.html" class="menu-link">courses</a></li>
 
                     <li class="menu-item menu-dropdown">
-                        <span class="menu-link" data-toggle="submenu">student information<i
-                                class="bx bx-chevron-down"></i></span>
+                        <span class="menu-link" data-toggle="submenu">student information<i class="fa fa-caret-down" aria-hidden="true"></i></span>
                         <ul class="submenu">
                             <li class="submenu-item"><a href="courseFees.html" class="submenu-link">courses Fees</a>
                             </li>
@@ -218,7 +219,7 @@
                         </ul>
                         <hr>
                         <br>
-                        <a href="aboutus.html" class="btnCstm">Read More</a>
+                        <a href="aboutus.html" class="btnCstm">Read More <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a>
                     </div>
                   
                 </div>
