--- a/studentAdmissionProcess.html
+++ b/studentAdmissionProcess.html
@@ -174,13 +174,13 @@
         </div>
         <div class="step">
             <div class="stepCount" >
-                <div class="stepHeading" style="filter: drop-shadow(0 0 5px var(--yellow)); color: var(--yellow);">
+                <div class="stepHeading" style="filter: drop-shadow(0 0 5px #007dcc); color: #007dcc;">
                     <h1>5</h1>
 
                 </div>
             </div>
             <div class="stepInfo">
-                <h3 style="background-color: var(--yellow);">accepted the Letter of Offer</h3>
+                <h3 style="background-color: #007dcc;">accepted the Letter of Offer</h3>
                 <p>
                     Once all documents have been submitted, you meet the entry requirements or course pre-requisite and you have accepted the Letter of Offer you will be issued a Student Written Agreement.
                 </p>
