create and updated the style of COURSE PAGE

--- a/index.html
+++ b/index.html
@@ -234,16 +234,19 @@
             <h1 class="heading">our course</h1>
             <div class="row">
                 <div class="col-md-3 col-6">
-                    <div class="courseCard">
-                        <div class="cardBody">
-                            <img src="img/about/students.jpg" class="img-fluid" alt="">
+                    <a href="Coursepage.html">
+                        <div class="courseCard">
+                            <div class="cardBody">
+                                <img src="img/about/students.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="cardText">
+                                <small class="badge badge-primary">SIT30821</small>
+    
+                                <h4>Commercial Cookery pathway Course</h4>
+                            </div>
                         </div>
-                        <div class="cardText">
-                            <small class="badge badge-primary">SIT30821</small>
-
-                            <h4>Commercial Cookery pathway Course</h4>
-                        </div>
-                    </div>
+                    </a>
+                
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="courseCard">
