--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </ul>
                 <div class="studentinformation">
                     <div class="container">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-md-8">
                                 <div class="dropinfo">
                                     <ul class="row">
