add all the agents and updated design, and add CertIvCourse, and also update course thumbnail

--- a/index.html
+++ b/index.html
@@ -268,57 +268,24 @@
             <img src="img/icons/homework.png" alt="">
         </div>
         <div class="container">
-            <h1 class="heading">our course</h1>
+            <!-- <h1 class="heading">our course</h1> -->
             <div class="row">
-                <div class="col-md-3 col-6">
-                    <a href="Coursepage.html">
-                        <div class="courseCard">
-                            <div class="cardBody">
-                                <img src="img/about/students.jpg" class="img-fluid" alt="">
-                            </div>
-                            <div class="cardText">
-                                <small class="badge badge-primary">SIT30821</small>
-    
-                                <h4>Commercial Cookery pathway Course</h4>
-                            </div>
-                        </div>
-                    </a>
-                
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="courseCard">
-                        <div class="cardBody">
-                            <img src="img/about/students.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="cardText">
-                            <small class="badge badge-primary">SIT30821</small>
+                <div class="col-md-4 col-6">
+                    <div class="courseCardBox">
+                        <img src="img/courses/cookery.png" alt="" class="img-fluid">                
 
-                            <h4>Leadership and Management</h4>
-                        </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
-                    <div class="courseCard">
-                        <div class="cardBody">
-                            <img src="img/about/students2.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="cardText">
-                            <small class="badge badge-primary">SIT30821</small>
+                <div class="col-md-4 col-6">
+                    <div class="courseCardBox">
+                        <img src="img/courses/leadership.png" alt="" class="img-fluid">                
 
-                            <h4>general english couerse (basic to advance level) </h4>
-                        </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
-                    <div class="courseCard">
-                        <div class="cardBody">
-                            <img src="img/about/students3.jpg" class="img-fluid" alt="">
-                        </div>
-                        <div class="cardText">
-                            <small class="badge badge-primary">SIT30821</small>
+                <div class="col-md-4 col-6">
+                    <div class="courseCardBox">
+                        <img src="img/courses/shortCourses.png" alt="" class="img-fluid">                
 
-                            <h4>certificate III commercial Cookery </h4>
-                        </div>
                     </div>
                 </div>
 
