--- a/contactus.html
+++ b/contactus.html
@@ -102,7 +102,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="">
-                        <img src="https://img.freepik.com/premium-vector/call-center-service_18591-29925.jpg" class="img-fluid" alt="">
+                        <img src="https://img.freepik.com/premium-vector/girl-attending-online-class_701961-8288.jpg?w=1380" class="img-fluid" alt="">
 
                     </div>
                 </div>
