--- a/courses/commercialCookery/certificateIvKitchenManagement.html
+++ b/courses/commercialCookery/certificateIvKitchenManagement.html
@@ -48,7 +48,7 @@
         <section class="wrapper container">
             <div class="logo">
                 <a href="./index.php">
-                    <img src="./img/logo.png" class="img-fluid" alt="">
+                    <img src="../../img/logo.png" class="img-fluid" alt="">
                 </a>
             </div>
             <div class="burger" id="burger">
