design policies page and add policies name

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             <a href="studentServiceSupport.html"> <i class="fa fa-info-circle" aria-hidden="true"></i> Student Services And Support</a>
                                         </li>
                                         <li class="col-sm-6">
-                                            <a href="pol-pro"><i class="fa fa-file-o" aria-hidden="true"></i> Policies and Procedures</a>
+                                            <a href="policies.html"><i class="fa fa-file-o" aria-hidden="true"></i> Policies and Procedures</a>
                                         </li>
                                         <li class="col-sm-6">
                                             <a href="useful-links"><i class="fa fa-link" aria-hidden="true"></i> Useful Links</a>
