add useful link page and add links card

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                             <a href="policies.html"><i class="fa fa-file-o" aria-hidden="true"></i> Policies and Procedures</a>
                                         </li>
                                         <li class="col-sm-6">
-                                            <a href="useful-links"><i class="fa fa-link" aria-hidden="true"></i> Useful Links</a>
+                                            <a href="useful-links.html"><i class="fa fa-link" aria-hidden="true"></i> Useful Links</a>
                                         </li>
                                     
                                         <li class="col-sm-6">
