chat button added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+    <div class="chatIcon">
+        <img src="img/icons/online-chat.png" class="img-fluid" alt="">
+    </div>
     <div class="headerbar">
         <div class="container-fluid">
             <div class="headerGrid">
