--- a/policies.html
+++ b/policies.html
@@ -269,7 +269,7 @@
             <div class="policyinform">
                     <p>If you have any questions or concerns about this Privacy Policy or our privacy practices, please contact us at:</p>
                     <br>
-                    <table class="table table-warning">
+                    <table class="table table-light">
                         <tr>
                             <th>Email</th>
                             <td><p> info@aiit.vic.edu.au</p></td>
