--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <section class="p-0">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6303.660659542066!2d144.963768!3d-37.817443!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad64348bae77441%3A0x775a811a5c947252!2sAustralian%20International%20Institute%20of%20Technology!5e0!3m2!1sen!2sau!4v1712456777438!5m2!1sen!2sau"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            width="100%" height="450" style="border:0; display: block;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
